Fix table spacing and border

--- a/src/Store.scss
+++ b/src/Store.scss
@@ -7,6 +7,8 @@
   table {
     border: 1px solid $gray-200;
     table-layout: fixed;
+    border-spacing: 0;
+    border-radius: $border-radius;
   }
 
   h1 {
@@ -18,6 +20,10 @@
     display: block;
     padding: 24px;
     border-bottom: 1px solid $gray-200;
+
+    &:last-child {
+      border-bottom: none;
+    }
   }
 
   th {
